--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,25 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/SecondFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.androidskeleton.ui.info.FirstFragment"
+        android:name="com.example.androidskeleton.ui.info.ItemsListFragment"
         android:label="First"
-        tools:layout="@layout/fragment_info">
+        tools:layout="@layout/fragment_items_list">
         <action
             android:id="@+id/action_firstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_firstFragment_to_addItemFragment"
+            app:destination="@id/addItemFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
+        android:id="@+id/homeFragment"
         android:name="com.example.androidskeleton.ui.info.HomeFragment"
         android:label="Second"
         tools:layout="@layout/fragment_home">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
+            android:id="@+id/action_HomeFragment_to_FirstFragment"
+            app:destination="@id/firstFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addItemFragment"
+        android:name="com.example.androidskeleton.ui.info.AddItemFragment"
+        android:label="Add Item"
+        tools:layout="@layout/fragment_add_item">
+        <action
+            android:id="@+id/action_addItemFragment_to_firstFragment"
             app:destination="@id/firstFragment" />
     </fragment>
 
