--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="gray_600">#797979</color>
     <color name="divider_color">#F2F2F2</color>
 
+    <color name="blue">#0000FF</color>
     <color name="green_400">#9FC747</color>
     <color name="green_500">#86B817</color>
     <color name="green_700">#508200</color>
