--- a/app/src/main/res/layout/fragment_items_list.xml
+++ b/app/src/main/res/layout/fragment_items_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <!-- RecyclerView to display the list of products -->
     <androidx.recyclerview.widget.RecyclerView
@@ -16,7 +17,11 @@
         app:layout_constraintHeight_default="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_default="spread" />
+        android:orientation="vertical"
+        android:paddingBottom="10dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintWidth_default="spread"
+        tools:listitem="@layout/item_articles"/>
 
     <!-- Floating Action Button (FAB) -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
