--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,15 +6,15 @@
     app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/firstFragment"
+        android:id="@+id/listFragment"
         android:name="com.example.androidskeleton.ui.info.ItemsListFragment"
-        android:label="First"
+        android:label="List Items"
         tools:layout="@layout/fragment_items_list">
         <action
-            android:id="@+id/action_firstFragment_to_SecondFragment"
+            android:id="@+id/action_listFragment_to_SecondFragment"
             app:destination="@id/homeFragment" />
         <action
-            android:id="@+id/action_firstFragment_to_addItemFragment"
+            android:id="@+id/action_listFragment_to_addItemFragment"
             app:destination="@id/addItemFragment" />
     </fragment>
     <fragment
@@ -24,8 +24,8 @@
         tools:layout="@layout/fragment_home">
 
         <action
-            android:id="@+id/action_HomeFragment_to_FirstFragment"
-            app:destination="@id/firstFragment" />
+            android:id="@+id/action_HomeFragment_to_listFragment"
+            app:destination="@id/listFragment" />
     </fragment>
     <fragment
         android:id="@+id/addItemFragment"
@@ -33,8 +33,8 @@
         android:label="Add Item"
         tools:layout="@layout/fragment_add_item">
         <action
-            android:id="@+id/action_addItemFragment_to_firstFragment"
-            app:destination="@id/firstFragment" />
+            android:id="@+id/action_addItemFragment_to_listFragment"
+            app:destination="@id/listFragment" />
     </fragment>
 
 </navigation>
