--- a/app/src/main/res/layout/item_articles.xml
+++ b/app/src/main/res/layout/item_articles.xml
@@ -52,7 +52,7 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPrice"
         style="@style/ShapeAppearanceOverlay.Material3.Button"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:background="@color/blue"
         android:gravity="center"
